# tierdb

./: .dockerignore  .gitignore  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  docker-compose.embedded.yml  docker-compose.rest.yml  docker-compose.yml  mkdocs.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: check.yml  docker.yml  docs.yml  release.yml
docker/: Dockerfile.postgres  Dockerfile.worker  README.md
docker/initdb/: 10-extensions.sql  30-s3-secret.sh
docs/: architecture.md  index.md
docs/getting-started/: architecture.md  concepts.md  installation.md  quickstart.md
docs/guides/: console.md  corrections.md  operations.md  production.md  reading.md  registering-tables.md
docs/ingestion/: bulk-ingestion.md  stream-load.md
docs/integrations/: index.md  spark.md
docs/modes/: choosing.md  contract.md
docs/operations/: aws.md  console.md  day-2.md  (+3 more)
example/: Makefile  README.md  lib.sh  live.sh  run.sh
extension/: Cargo.toml
extension/.cargo/: config.toml
extension/crates/modak-core/: Cargo.toml
extension/crates/modak-core/src/: dml.rs  domain.rs  lib.rs  planner.rs  ports.rs  sqlgen.rs  tier_key.rs
extension/crates/modak-pg/: Cargo.toml  modak.control
extension/crates/modak-pg/src/: catalog.rs  cold_mirror.rs  delta.rs  dml.rs  dml_rewrite.rs  embedded.rs  explain.rs  hook.rs  lib.rs  pin.rs  planner.rs  router.rs
extension/crates/tierdb-core/src/: sqlgen.rs
extension/crates/tierdb-pg/src/: delta.rs  explain.rs
sql/: catalog.sql
worker/: jlink-modules.txt  pom.xml
(+272 files in other folders)
